Incorporación de dependencia para test y correción